@@ -403,6 +403,7 @@ RESOURCE =	$(libunixobj)/resource/getegid.o \
 	$(libunixobj)/resource/setprior.o \
 	$(libunixobj)/resource/setrlimit.o \
 	$(libunixobj)/resource/setuid.o \
+	$(libunixobj)/resource/setsid.o \
 	$(libunixobj)/resource/ulimit.o
 
 SIGNAL =	$(libunixobj)/signal/init.o \
@@ -747,8 +748,11 @@ install_source:
 		 clib/machine clib/net clib/netinet clib/sys clib/unixlib; do \
 	  $(instsrc) $$dir "*.[chs]" source/$$dir $(ro_unixlibpkg) ; done
 
+$(ux_gcc_bin_dir)/$(TRG)/unixlib.o $(ro_gcc_bin_dir)/$(TRG)/o/unixlib : $(ro_unixlibpkg)/source/clib/o/unixlib
+	cp $< $@
+
 # Split AR to work around Cygwin 16Kbyte command line limit,
-$(ux_gcc_bin_dir)/$(TRG)/unixlib.o $(ro_gcc_bin_dir)/$(TRG)/o/unixlib $(ro_unixlibpkg)/source/clib/o/unixlib: $(C_OBJS) $(ASM_OBJS)
+$(ro_unixlibpkg)/source/clib/o/unixlib: $(C_OBJS) $(ASM_OBJS)
 	$(CROSS_AR) -c $@ $(COMPLEX)
 	$(CROSS_AR) -i $@ $(CRYPT)
 	$(CROSS_AR) -i $@ $(MATH)
@@ -784,6 +788,7 @@ $(ux_gcc_bin_dir)/$(TRG)/unixlib.o $(ro_gcc_bin_dir)/$(TRG)/o/unixlib $(ro_unixl
 	$(CROSS_AR) -i $@ $(SYS_ASM)
 	$(CROSS_AR) -i $@ $(TIME_ASM)
 	$(CROSS_AR) -i $@ $(UNIX_ASM)
+#	$(CROSS_AR) -i $@ $?
 
 $(SUL):	$(MODULE)
 	$(CROSS_CC) $(MODULE) -Xlinker -module -o $@
