@@ -1,0 +1,25 @@
+/****************************************************************************
+ *
+ * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/resource/setgid.c,v $
+ * $Date: 2001/09/04 16:32:04 $
+ * $Revision: 1.2.2.1 $
+ * $State: Exp $
+ * $Author: admin $
+ *
+ ***************************************************************************/
+
+#ifdef EMBED_RCSID
+static const char rcs_id[] = "$Id: setgid.c,v 1.2.2.1 2001/09/04 16:32:04 admin Exp $";
+#endif
+
+#include <unistd.h>
+#include <unixlib/unix.h>
+#include <errno.h>
+
+/* Creates a new session if the calling process is not a process group leader */
+
+__pid_t
+setsid (void)
+{
+  return __set_errno (ENOSYS);
+}
